--- a/css/app.css
+++ b/css/app.css
@@ -2048,7 +2048,7 @@ body.no-scroll {
   border-radius: 20px;
   font-family: 'Nova Square', cursive;
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 600;
   letter-spacing: -.04em;
   -webkit-transition: all .25s;
   -o-transition: all .25s;
@@ -2584,8 +2584,8 @@ body:not(.touch-device) .header__item:hover .header__body {
 .title {
   position: relative;
   font-family: 'Nova Square', cursive;
-  font-size: 80px;
-  font-weight: 500;
+  font-size: 40px;
+  font-weight: 800;
   line-height: 1;
   letter-spacing: -.025em;
 }
@@ -2663,13 +2663,13 @@ body:not(.touch-device) .header__item:hover .header__body {
   font-size: 18px;
   letter-spacing: 0;
   line-height: 1.5;
-  color: #999FAE;
+  color: #000;
 }
 
 .stage {
   font-family: 'Nova Square', cursive;
   font-size: 20px;
-  font-weight: 700;
+  font-weight: 500;
   line-height: 1;
 }
 
@@ -2682,7 +2682,7 @@ body:not(.touch-device) .header__item:hover .header__body {
 }
 
 .main__wrap {
-  max-width: 440px;
+  max-width: 510px;
 }
 
 .main__title {
@@ -2692,6 +2692,9 @@ body:not(.touch-device) .header__item:hover .header__body {
 .main__info {
   max-width: 320px;
   margin-bottom: 40px;
+  color: #000;
+  font-size: 18px;
+  display: inline;
 }
 
 .main__control {
@@ -2759,13 +2762,23 @@ body:not(.touch-device) .header__item:hover .header__body {
 }
 
 .main__preview:nth-child(3) {
-  right: 157px;
-  bottom: 10px;
-  width: 98px;
+  right: 20px;
+  top: 29px;
+  width: 360px;
+  animation: rotation 10s infinite linear;
 }
 
 .main__preview:nth-child(4) {
-  width: 768px;
+  width: 445px;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
 }
 
 .main__preview:not(:last-child) {
@@ -2909,7 +2922,7 @@ body:not(.touch-device) .header__item:hover .header__body {
   right: calc(50% - 1330px);
   width: 1400px;
   height: 1200px;
-  background: #201d8e;
+  background: transparent;
 }
 
 .main__circle:nth-child(7) {
@@ -3468,7 +3481,7 @@ body:not(.touch-device) .header__item:hover .header__body {
 
 .layouts {
   position: relative;
-  padding: 231px 0 165px;
+  padding: 100px 0 165px;
 }
 
 .layouts__wrap {
@@ -3481,7 +3494,7 @@ body:not(.touch-device) .header__item:hover .header__body {
 }
 
 .layouts__head {
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 .layouts__info {
@@ -3520,7 +3533,7 @@ body:not(.touch-device) .header__item:hover .header__body {
 
 .layouts__view {
   position: absolute;
-  top: 287px;
+  top: 215px;
   right: calc(50% - 717px);
   font-size: 0;
 }
@@ -4003,7 +4016,7 @@ body:not(.touch-device) .header__item:hover .header__body {
 }
 
 .plan__item:nth-child(3) {
-  border: 1px solid #E3E6E9;
+  background: #fff;
 }
 
 .plan__item:not(:first-child) {
@@ -5173,7 +5186,7 @@ body:not(.touch-device) .header__item:hover .header__body {
 }
 
 .design__title {
-  margin-bottom: 48px;
+  margin-bottom: 30px;
 }
 
 .design__info {
@@ -5389,13 +5402,14 @@ body:not(.touch-device) .header__item:hover .header__body {
   margin-bottom: 23px;
   font-family: 'Nova Square', cursive;
   font-size: 26px;
-  font-weight: 500;
+  font-weight: 800;
   line-height: 1.1;
   letter-spacing: -.045em;
 }
 
 .design__text {
   color: #999FAE;
+  min-height: 72px;
 }
 
 .design__link {
@@ -6832,7 +6846,7 @@ body:not(.touch-device) .header__item:hover .header__body {
   display: -ms-flexbox;
   display: flex;
   margin-right: -40px;
-  margin-bottom: 73px;
+  margin-bottom: 0px;
 }
 
 .footer__col {
@@ -6856,8 +6870,9 @@ body:not(.touch-device) .header__item:hover .header__body {
 }
 
 .footer__category {
-  margin-bottom: 50px;
+  margin-bottom: 0;
   color: #999FAE;
+  margin-top: 10px;
 }
 
 .footer__category .icon {
@@ -7608,13 +7623,19 @@ body:not(.touch-device) .header__item:hover .header__body {
   padding-left: 1.5rem !important;
   font-size: 16px;
   font-weight: 400;
-  color: #989898 !important;
+  color: #000 !important;
 }
 
 .banner_block .main__title {
-  margin-bottom: 21px;
-  font-size: 66px;
+  margin-bottom: 0px;
+  font-size: 28px;
   font-weight: 600;
+  letter-spacing: -0.01em;
+  line-height: 1.2;
+}
+
+.banner_block .main__title .title__text {
+  font-size: 44px;
 }
 
 .banner_block .main__control .main__link {
@@ -7631,6 +7652,26 @@ body:not(.touch-device) .header__item:hover .header__body {
 
 .banner_block .main__link .main__text {
   font-size: 18px;
+}
+
+.banner_block .main__info img {
+  position: relative;
+  top: 15px;
+  width: 22px;
+}
+
+.main__control {
+  margin-top: 20px;
+}
+
+.social_icons {
+  text-align: right;
+  font-size: 20px;
+}
+
+.social_icons a {
+  margin: 0 5px;
+  color: #333;
 }
 
 /*End Custom CSS*/
@@ -7771,11 +7812,15 @@ body:not(.touch-device) .header__item:hover .header__body {
   }
   .main__view {
     top: 0;
-    right: calc(50% - 686px);
+    right: calc(65% - 686px);
   }
 
   .main {
     padding: 100px 0 100px;
+  }
+
+  .main__view {
+    top: 20px;
   }
 }
 
@@ -8806,7 +8851,7 @@ body:not(.touch-device) .header__item:hover .header__body {
     font-size: 16px;
   }
   .main {
-    padding: 170px 0 35px;
+    padding: 30px 0 35px;
   }
   .main__wrap {
     max-width: 100%;
@@ -10140,6 +10185,31 @@ body:not(.touch-device) .header__item:hover .header__body {
   .mfp-container {
     padding: 0;
   }
+
+  .banner_block .main__link {
+    width: 100%;
+    text-align: left;
+    justify-content: left;
+    border: 0;
+  }
+
+  .banner_block .main__link img {
+    margin-right: 5px;
+  }
+
+  .main__preview:nth-child(4) {
+    margin: auto;
+  }
+
+  .main__preview:nth-child(3) {
+    right: 0;
+    bottom: 6px;
+    width: 250px;
+    height: 250px;
+    margin: auto;
+    top: 0;
+    left: 24px;
+  }
 }
 
 @media only screen and (max-width: 666px) {
@@ -10153,7 +10223,7 @@ body:not(.touch-device) .header__item:hover .header__body {
     max-width: 230px;
   }
   .main__control {
-    margin-bottom: 113px;
+    margin-bottom: 0px;
   }
   .features__info {
     max-width: 250px;
